// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`loads existing manifests (monorepo) 1`] = `
[
  ScriptStoreEntry {
    "description": undefined,
    "isGlobal": false,
    "isRootManifest": true,
    "manifestPath": "package.json",
    "projectName": "monorepo",
    "scriptCode": "tsc",
    "scriptName": "build",
  },
  ScriptStoreEntry {
    "description": undefined,
    "isGlobal": false,
    "isRootManifest": false,
    "manifestPath": "packages/some-project/package.json",
    "projectName": "some-project",
    "scriptCode": "tsc",
    "scriptName": "build",
  },
  ScriptStoreEntry {
    "description": undefined,
    "isGlobal": true,
    "isRootManifest": false,
    "manifestPath": "packages/some-project/package.json",
    "projectName": "some-project",
    "scriptCode": "docker run --rm -it -p 8000:8000 -v \${PWD}:/docs squidfunk/mkdocs-material build --site-dir=public",
    "scriptName": "docs:build",
  },
  ScriptStoreEntry {
    "description": undefined,
    "isGlobal": true,
    "isRootManifest": false,
    "manifestPath": "packages/some-project/package.json",
    "projectName": "some-project",
    "scriptCode": "yarn nsd-debug --include-locals",
    "scriptName": "docs:scripts",
  },
  ScriptStoreEntry {
    "description": undefined,
    "isGlobal": true,
    "isRootManifest": false,
    "manifestPath": "packages/some-project/package.json",
    "projectName": "some-project",
    "scriptCode": "docker run --rm -it -p 8000:8000 -v \${PWD}:/docs squidfunk/mkdocs-material",
    "scriptName": "docs:serve",
  },
  ScriptStoreEntry {
    "description": undefined,
    "isGlobal": true,
    "isRootManifest": false,
    "manifestPath": "packages/some-project/package.json",
    "projectName": "some-project",
    "scriptCode": "yarn build && npm publish",
    "scriptName": "npm:publish",
  },
  ScriptStoreEntry {
    "description": undefined,
    "isGlobal": true,
    "isRootManifest": false,
    "manifestPath": "packages/some-project/package.json",
    "projectName": "some-project",
    "scriptCode": "yarn build && npm version patch && npm publish",
    "scriptName": "npm:publish:patch",
  },
  ScriptStoreEntry {
    "description": undefined,
    "isGlobal": false,
    "isRootManifest": false,
    "manifestPath": "packages/some-project/package.json",
    "projectName": "some-project",
    "scriptCode": "yarn build && node output/node-scripts-docs.js",
    "scriptName": "nsd-debug",
  },
  ScriptStoreEntry {
    "description": undefined,
    "isGlobal": false,
    "isRootManifest": true,
    "manifestPath": "package.json",
    "projectName": "monorepo",
    "scriptCode": "jest",
    "scriptName": "test",
  },
  ScriptStoreEntry {
    "description": undefined,
    "isGlobal": false,
    "isRootManifest": false,
    "manifestPath": "packages/some-project/package.json",
    "projectName": "some-project",
    "scriptCode": "jest",
    "scriptName": "test",
  },
  ScriptStoreEntry {
    "description": undefined,
    "isGlobal": true,
    "isRootManifest": false,
    "manifestPath": "packages/some-project/package.json",
    "projectName": "some-project",
    "scriptCode": "jest --coverage",
    "scriptName": "test:coverage",
  },
]
`;

exports[`loads existing manifests (simple project) 1`] = `
[
  ScriptStoreEntry {
    "description": undefined,
    "isGlobal": false,
    "isRootManifest": true,
    "manifestPath": "package.json",
    "projectName": "default",
    "scriptCode": "tsc",
    "scriptName": "build",
  },
  ScriptStoreEntry {
    "description": undefined,
    "isGlobal": true,
    "isRootManifest": true,
    "manifestPath": "package.json",
    "projectName": "default",
    "scriptCode": "docker run --rm -it -p 8000:8000 -v \${PWD}:/docs squidfunk/mkdocs-material build --site-dir=public",
    "scriptName": "docs:build",
  },
  ScriptStoreEntry {
    "description": undefined,
    "isGlobal": true,
    "isRootManifest": true,
    "manifestPath": "package.json",
    "projectName": "default",
    "scriptCode": "yarn nsd-debug --include-locals",
    "scriptName": "docs:scripts",
  },
  ScriptStoreEntry {
    "description": undefined,
    "isGlobal": true,
    "isRootManifest": true,
    "manifestPath": "package.json",
    "projectName": "default",
    "scriptCode": "docker run --rm -it -p 8000:8000 -v \${PWD}:/docs squidfunk/mkdocs-material",
    "scriptName": "docs:serve",
  },
  ScriptStoreEntry {
    "description": undefined,
    "isGlobal": true,
    "isRootManifest": true,
    "manifestPath": "package.json",
    "projectName": "default",
    "scriptCode": "yarn build && npm publish",
    "scriptName": "npm:publish",
  },
  ScriptStoreEntry {
    "description": undefined,
    "isGlobal": true,
    "isRootManifest": true,
    "manifestPath": "package.json",
    "projectName": "default",
    "scriptCode": "yarn build && npm version patch && npm publish",
    "scriptName": "npm:publish:patch",
  },
  ScriptStoreEntry {
    "description": undefined,
    "isGlobal": false,
    "isRootManifest": true,
    "manifestPath": "package.json",
    "projectName": "default",
    "scriptCode": "yarn build && node output/node-scripts-docs.js",
    "scriptName": "nsd-debug",
  },
  ScriptStoreEntry {
    "description": undefined,
    "isGlobal": false,
    "isRootManifest": true,
    "manifestPath": "package.json",
    "projectName": "default",
    "scriptCode": "jest",
    "scriptName": "test",
  },
  ScriptStoreEntry {
    "description": undefined,
    "isGlobal": true,
    "isRootManifest": true,
    "manifestPath": "package.json",
    "projectName": "default",
    "scriptCode": "jest --coverage",
    "scriptName": "test:coverage",
  },
]
`;
